@@ -12,7 +12,7 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     if (!is.null(sex))
         sex <- .checkSex(sex)
     
-    if(verbose) message("[preprocessQuantile] Mapping to genome.\n")
+    if(verbose) message("[preprocessQuantile] Mapping to genome.")
     object <- mapToGenome(object, mergeManifest = mergeManifest)
     
     if (.is27k(object) && stratified) {
@@ -21,7 +21,7 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     }
     
     if(fixOutliers){
-        if(verbose) message("[preprocessQuantile] Fixing outliers.\n")
+        if(verbose) message("[preprocessQuantile] Fixing outliers.")
         object <- fixMethOutliers(object)
     }
     qc <- getQC(object)
@@ -29,7 +29,7 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     keepIndex <- which(meds > badSampleCutoff)
     if(length(keepIndex) == 0 && removeBadSamples) stop("All samples found to be bad")
     if(length(keepIndex) < ncol(object) && removeBadSamples) {
-        if(verbose) message(sprintf("[preprocessQuantile] Found and removed %s bad samples.\n",
+        if(verbose) message(sprintf("[preprocessQuantile] Found and removed %s bad samples.",
                                 ncol(object) - length(keepIndex)))
         object <- object[, keepIndex]
     }
@@ -44,18 +44,22 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     auIndex <- which(seqnames(object) %in% paste0("chr", 1:22))
 
     if(quantileNormalize){
-        if(verbose) message("[preprocessQuantile] Quantile normalizing.\n")
+        if(verbose) message("[preprocessQuantile] Quantile normalizing.")
         if (!stratified) {
-            U <- .qnormNotStratified(getUnmeth(object), auIndex, xIndex, yIndex, sex)
-            M <- .qnormNotStratified(getMeth(object), auIndex, xIndex, yIndex, sex)
+            U <- .qnormNotStratified(mat = getUnmeth(object), auIndex = auIndex,
+                                     xIndex = xIndex, yIndex = yIndex, sex = sex)
+            M <- .qnormNotStratified(mat = getMeth(object), auIndex = auIndex,
+                                     xIndex = xIndex, yIndex = yIndex, sex = sex)
         } else {
             probeType <- getProbeType(object)
             regionType <- getIslandStatus(object)
             regionType[regionType %in% c("Shelf", "OpenSea")] <- "Far"
-            U <- .qnormStratified(getUnmeth(object), auIndex,
-                                  xIndex, yIndex, sex, probeType, regionType)
-            M <- .qnormStratified(getMeth(object), auIndex,
-                                  xIndex, yIndex, sex, probeType, regionType)
+            U <- .qnormStratified(mat = getUnmeth(object), auIndex = auIndex,
+                                  xIndex = xIndex, yIndex = yIndex, sex = sex,
+                                  probeType = probeType, regionType = regionType)
+            M <- .qnormStratified(mat = getMeth(object), auIndex = auIndex,
+                                  xIndex = xIndex, yIndex = yIndex, sex = sex,
+                                  probeType = probeType, regionType = regionType)
         }
     } else {
         U <- getUnmeth(object)
@@ -91,7 +95,8 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
 }
 
 .qnormStratified <- function(mat, auIndex, xIndex, yIndex, sex=NULL, probeType, regionType){
-    mat[auIndex,] <- .qnormStratifiedHelper(mat[auIndex,], probeType[auIndex], regionType[auIndex])
+    mat[auIndex,] <- .qnormStratifiedHelper(mat = mat[auIndex,], probeType = probeType[auIndex],
+                                            regionType = regionType[auIndex])
     if(!is.null(sex)) {
         sexIndexes <- split(1:ncol(mat), sex)
     } else {
@@ -100,9 +105,10 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
     }
     sexIndexes <- sexIndexes[sapply(sexIndexes, length) > 1]
     for(idxes in sexIndexes) {
-        mat[c(xIndex, yIndex), idxes] <- .qnormStratifiedHelper(mat[c(xIndex, yIndex), idxes, drop=FALSE],
-                                                                probeType[c(xIndex, yIndex)],
-                                                                regionType[c(xIndex, yIndex)])
+        mat[c(xIndex, yIndex), idxes] <- .qnormStratifiedHelper(
+            mat = mat[c(xIndex, yIndex), idxes, drop=FALSE],
+            probeType = probeType[c(xIndex, yIndex)],
+            regionType = regionType[c(xIndex, yIndex)])
     }
     return(mat)
 }
@@ -120,11 +126,17 @@ preprocessQuantile <- function(object, fixOutliers=TRUE,
         Index1 <- which(inRegion & probeType == "I")
         Index2 <- which(inRegion & probeType == "II")
         mat[Index2,] <- preprocessCore::normalize.quantiles(mat[Index2,])
-        target <- approx(seq(along=Index2), sort(mat[Index2,1]),
-                         seq(from = min(mat[Index2,1]), to = max(mat[Index2,1]),
-                             length.out=length(Index1)))$y
-        mat[Index1,] <- preprocessCore::normalize.quantiles.use.target(mat[Index1,,drop=FALSE],
-                                                                       target)
+        ## The following code is easy to understand, but we are not using it
+        ##   because we want the results to stay stable.  It gives almost the
+        ##   same results as the code below.
+        ##
+        ## mat[Index1,] <- preprocessCore::normalize.quantiles.use.target(
+        ##                                     mat[Index1,,drop=FALSE],
+        ##                                     mat[Index2,1,drop=TRUE])
+        target <- approx(seq(along = Index2), sort(mat[Index2, 1]),
+                         seq(1, length(Index2), length.out = length(Index1)))$y
+        mat[Index1, ] <- preprocessCore::normalize.quantiles.use.target(
+                                             mat[Index1, ,drop = FALSE], target)
     }
     return(mat)
 }
