@@ -1,7 +1,7 @@
 
-R version 3.3.1 RC (2016-06-14 r70789) -- "Bug in Your Hair"
+R Under development (unstable) (2016-11-14 r71659) -- "Unsuffered Consequences"
 Copyright (C) 2016 The R Foundation for Statistical Computing
-Platform: x86_64-apple-darwin15.5.0 (64-bit)
+Platform: x86_64-apple-darwin16.1.0 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -32,17 +32,30 @@ The following objects are masked from ‘package:parallel’:
 
 The following objects are masked from ‘package:stats’:
 
-    IQR, mad, xtabs
+    IQR, mad, sd, var, xtabs
 
 The following objects are masked from ‘package:base’:
 
-    anyDuplicated, append, as.data.frame, cbind, colnames, do.call,
-    duplicated, eval, evalq, Filter, Find, get, grep, grepl, intersect,
-    is.unsorted, lapply, lengths, Map, mapply, match, mget, order,
-    paste, pmax, pmax.int, pmin, pmin.int, Position, rank, rbind,
-    Reduce, rownames, sapply, setdiff, sort, table, tapply, union,
-    unique, unsplit, which, which.max, which.min
+    anyDuplicated, append, as.data.frame, cbind, colMeans, colnames,
+    colSums, do.call, duplicated, eval, evalq, Filter, Find, get, grep,
+    grepl, intersect, is.unsorted, lapply, lengths, Map, mapply, match,
+    mget, order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,
+    rbind, Reduce, rowMeans, rownames, rowSums, sapply, setdiff, sort,
+    table, tapply, union, unique, unsplit, which, which.max, which.min
 
+Loading required package: GenomicRanges
+Loading required package: stats4
+Loading required package: S4Vectors
+
+Attaching package: ‘S4Vectors’
+
+The following object is masked from ‘package:base’:
+
+    expand.grid
+
+Loading required package: IRanges
+Loading required package: GenomeInfoDb
+Loading required package: SummarizedExperiment
 Loading required package: Biobase
 Welcome to Bioconductor
 
@@ -50,20 +63,6 @@ Welcome to Bioconductor
     'browseVignettes()'. To cite Bioconductor, see
     'citation("Biobase")', and for packages 'citation("pkgname")'.
 
-Loading required package: lattice
-Loading required package: GenomicRanges
-Loading required package: stats4
-Loading required package: S4Vectors
-
-Attaching package: ‘S4Vectors’
-
-The following objects are masked from ‘package:base’:
-
-    colMeans, colSums, expand.grid, rowMeans, rowSums
-
-Loading required package: IRanges
-Loading required package: GenomeInfoDb
-Loading required package: SummarizedExperiment
 Loading required package: Biostrings
 Loading required package: XVector
 Loading required package: bumphunter
@@ -79,19 +78,16 @@ Loading required package: IlluminaHumanMethylation450kanno.ilmn12.hg19
 > 
 > GRset.quantile <- preprocessQuantile(MsetEx)
 [preprocessQuantile] Mapping to genome.
-
 [preprocessQuantile] Fixing outliers.
-
 [preprocessQuantile] Quantile normalizing.
-
 > digest_preprocessQuantile <- list(M = minfi:::.digestMatrix(getM(GRset.quantile)),
 +                                   CN = minfi:::.digestMatrix(getCN(GRset.quantile)))
 > save(digest_preprocessQuantile, file = "../unitTests/digest_preprocessQuantile.rda")
 > 
 > sessionInfo()                         
-R version 3.3.1 RC (2016-06-14 r70789)
-Platform: x86_64-apple-darwin15.5.0 (64-bit)
-Running under: OS X 10.11.6 (El Capitan)
+R Under development (unstable) (2016-11-14 r71659)
+Platform: x86_64-apple-darwin16.1.0 (64-bit)
+Running under: macOS Sierra 10.12.1
 
 locale:
 [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
@@ -101,47 +97,46 @@ attached base packages:
 [8] methods   base     
 
 other attached packages:
- [1] digest_0.6.9                                      
- [2] minfiData_0.16.0                                  
- [3] IlluminaHumanMethylation450kanno.ilmn12.hg19_0.5.1
- [4] IlluminaHumanMethylation450kmanifest_0.5.0        
- [5] minfi_1.19.10                                     
- [6] bumphunter_1.13.1                                 
+ [1] digest_0.6.10                                     
+ [2] minfiData_0.21.1                                  
+ [3] IlluminaHumanMethylation450kanno.ilmn12.hg19_0.6.0
+ [4] IlluminaHumanMethylation450kmanifest_0.4.0        
+ [5] minfi_1.21.3                                      
+ [6] bumphunter_1.15.0                                 
  [7] locfit_1.5-9.1                                    
  [8] iterators_1.0.8                                   
  [9] foreach_1.4.3                                     
-[10] Biostrings_2.41.4                                 
-[11] XVector_0.13.6                                    
-[12] SummarizedExperiment_1.3.7                        
-[13] GenomicRanges_1.25.9                              
-[14] GenomeInfoDb_1.9.4                                
-[15] IRanges_2.7.11                                    
-[16] S4Vectors_0.11.9                                  
-[17] lattice_0.20-33                                   
-[18] Biobase_2.33.0                                    
-[19] BiocGenerics_0.19.2                               
+[10] Biostrings_2.43.1                                 
+[11] XVector_0.15.0                                    
+[12] SummarizedExperiment_1.5.3                        
+[13] Biobase_2.35.0                                    
+[14] GenomicRanges_1.27.16                             
+[15] GenomeInfoDb_1.11.6                               
+[16] IRanges_2.9.14                                    
+[17] S4Vectors_0.13.5                                  
+[18] BiocGenerics_0.21.1                               
 
 loaded via a namespace (and not attached):
- [1] genefilter_1.55.2       splines_3.3.1           beanplot_1.2           
- [4] rtracklayer_1.33.10     GenomicFeatures_1.25.15 chron_2.3-47           
- [7] XML_3.98-1.4            survival_2.39-4         DBI_0.4-1              
-[10] BiocParallel_1.7.4      RColorBrewer_1.1-2      registry_0.3           
-[13] rngtools_1.2.4          doRNG_1.6               matrixStats_0.50.2     
-[16] plyr_1.8.4              pkgmaker_0.22           stringr_1.0.0          
-[19] zlibbioc_1.19.0         codetools_0.2-14        biomaRt_2.29.2         
-[22] AnnotationDbi_1.35.4    illuminaio_0.15.0       preprocessCore_1.35.0  
-[25] Rcpp_0.12.6             xtable_1.8-2            openssl_0.9.4          
-[28] limma_3.29.14           base64_2.0              annotate_1.51.0        
-[31] Rsamtools_1.25.0        stringi_1.1.1           nor1mix_1.2-1          
-[34] grid_3.3.1              GEOquery_2.39.3         quadprog_1.5-5         
-[37] tools_3.3.1             bitops_1.0-6            magrittr_1.5           
-[40] siggenes_1.47.0         RCurl_1.95-4.8          RSQLite_1.0.0          
-[43] MASS_7.3-45             Matrix_1.2-6            data.table_1.9.6       
-[46] httr_1.2.1              reshape_0.8.5           R6_2.1.2               
-[49] mclust_5.2              GenomicAlignments_1.9.6 multtest_2.29.0        
-[52] nlme_3.1-128           
+ [1] mclust_5.2               base64_2.0               Rcpp_0.12.8             
+ [4] lattice_0.20-34          Rsamtools_1.27.5         R6_2.2.0                
+ [7] plyr_1.8.4               RSQLite_1.1              httr_1.2.1              
+[10] zlibbioc_1.21.0          GenomicFeatures_1.27.4   data.table_1.10.0       
+[13] annotate_1.53.0          Matrix_1.2-7.1           preprocessCore_1.37.0   
+[16] splines_3.4.0            BiocParallel_1.9.2       stringr_1.1.0           
+[19] RCurl_1.95-4.8           biomaRt_2.31.3           compiler_3.4.0          
+[22] rtracklayer_1.35.1       multtest_2.31.0          pkgmaker_0.22           
+[25] openssl_0.9.5            GEOquery_2.41.0          quadprog_1.5-5          
+[28] codetools_0.2-15         matrixStats_0.51.0       XML_3.98-1.5            
+[31] reshape_0.8.6            GenomicAlignments_1.11.6 MASS_7.3-45             
+[34] bitops_1.0-6             grid_3.4.0               nlme_3.1-128            
+[37] xtable_1.8-2             registry_0.3             DBI_0.5-1               
+[40] magrittr_1.5             stringi_1.1.2            genefilter_1.57.0       
+[43] doRNG_1.6                limma_3.31.6             nor1mix_1.2-2           
+[46] RColorBrewer_1.1-2       siggenes_1.49.0          tools_3.4.0             
+[49] illuminaio_0.17.0        rngtools_1.2.4           survival_2.40-1         
+[52] AnnotationDbi_1.37.0     beanplot_1.2             memoise_1.0.0           
 > rm(list = ls())
 > 
 > proc.time()
    user  system elapsed 
- 33.960   1.885  35.901 
+ 35.815   2.237  38.703 
